--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.4",
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2"
   }
